--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Hello Coursera</title>
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<html ng-app="myApp">
+  <head>
+    <meta charset="utf-8">
+    <title>First Angular.js App</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="app.js"></script>
+  </head>
+  <body>
+    <h1>First AngularJS App!</h1>
+    <div ng-controller="myController">
+      <input type="text" ng-model="name">
+      <br/>
+      <br/>
+      Input box says: {{name}}
+    </div>
+  </body>
 </html>
