--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8">
-    <title>First Angular.js App</title>
+    <title>Lecture 6 App</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="app.js"></script>
   </head>
   <body>
-    <h1>First AngularJS App!</h1>
     <div ng-controller="myController">
-      <input type="text" ng-model="name">
-      <br/>
-      <br/>
-      Input box says: {{name}}
+      
     </div>
   </body>
 </html>
