--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -22,32 +22,34 @@
           }
       </style>
     </head>
-    <body>
+    <body ng-app="ShoppingListCheckOff">
     <div class="container">
     <h1>Shopping List Check Off</h1>
 
     <div class="row">
 
         <!-- To Buy List -->
-        <div class="col-md-6">
-        <h2>To Buy:</h2>
-        <ul>
-        <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-        <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-        </ul>
-        <div class="emptyMessage">Everything is bought!</div>
+        <div class="col-md-6" ng-controller="ToBuyController as toBuy">
+            <h2>To Buy:</h2>
+                <ul>
+                    <li><button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+                </ul>
+            <div class="emptyMessage">Everything is bought!</div>
         </div>
 
         <!-- Already Bought List -->
-        <div class="col-md-6">
-        <h2>Already Bought:</h2>
-        <ul>
-        <li>Bought 10 cookies</li>
-        </ul>
-        <div class="emptyMessage">Nothing bought yet.</div>
+        <div class="col-md-6" ng-controller="AlreadyBoughtController as bought">
+            <h2>Already Bought:</h2>
+            <ul>
+                <li></li>
+            </ul>
+            <div class="emptyMessage">Nothing bought yet.</div>
         </div>
     </div>
     </div>
 
+    <!-- Link Angular.js and app.js: -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.js"></script>
+    <script src="app.js"></script>
     </body>
 </html>
