Creates and displays shopping list with pre-defined items

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -32,9 +32,9 @@
         <div class="col-md-6" ng-controller="ToBuyController as toBuy">
             <h2>To Buy:</h2>
                 <ul>
-                    <li><button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+                    <li ng-repeat="item in toBuy.toBuyItems"> {{item.quantity}} of {{item.name}} <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
                 </ul>
-            <div class="emptyMessage">Everything is bought!</div>
+            <div class="emptyMessage" ng-if="toBuy.toBuyListEmpty">Everything is bought!</div>
         </div>
 
         <!-- Already Bought List -->
