--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -32,7 +32,7 @@
         <div class="col-md-6" ng-controller="ToBuyController as toBuy">
             <h2>To Buy:</h2>
                 <ul>
-                    <li ng-repeat="item in toBuy.toBuyItems"> {{item.quantity}} of {{item.name}} <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+                    <li ng-repeat="item in toBuy.itemsList"> {{item.quantity}} {{item.name}} <button class="btn btn-default" ng-click="toBuy.checkoffItem(item)"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
                 </ul>
             <div class="emptyMessage" ng-if="toBuy.toBuyListEmpty">Everything is bought!</div>
         </div>
@@ -41,7 +41,7 @@
         <div class="col-md-6" ng-controller="AlreadyBoughtController as bought">
             <h2>Already Bought:</h2>
             <ul>
-                <li></li>
+                <li ng-repeat="item in bought.itemsList">{{item.quantity}} {{item.name}} </li>
             </ul>
             <div class="emptyMessage">Nothing bought yet.</div>
         </div>
