All functionality except for ng-if on bought-list message

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -43,7 +43,8 @@
             <ul>
                 <li ng-repeat="item in bought.itemsList">{{item.quantity}} {{item.name}} </li>
             </ul>
-            <div class="emptyMessage">Nothing bought yet.</div>
+            <div class="emptyMessage" ng-if="bought.boughtListIsEmpty">Nothing bought yet.</div>
+            {{bought.boughtListIsEmpty}}
         </div>
     </div>
     </div>
