--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body>
-   <div class="container">
+<body ng-app="NarrowItDownApp">
+  <div class="container">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
-    </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
+    <div ng-controller="NarrowItDownController as ctrl">
+        <div class="form-group">
+        <input type="text" placeholder="search term" class="form-control">
+        </div>
+        <div class="form-group narrow-button">
+        <button class="btn btn-primary">Narrow It Down For Me!</button>
+        </div>
 
-    <found-items found-items="...." on-remove="...."></found-items>
+        <found-items found-items="...." on-remove="...."></found-items>
+    </div>
+  
   </div>
 
 </body>
