Created base for directive; finally fixed bug with passing matched menu items to controller

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -19,7 +19,7 @@
             <button class="btn btn-primary" ng-click="ctrl.setSearchTerm()">Narrow It Down For Me!</button>
         </div>
 
-        <found-items found-items="...." on-remove="...."></found-items>
+        <found-items found="ctrl.matchedItems" on-remove=""></found-items>
     </div>
   
   </div>
