--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -19,7 +19,7 @@
             <button class="btn btn-primary" ng-click="ctrl.setSearchTerm()">Narrow It Down For Me!</button>
         </div>
 
-        <found-items found="ctrl.found"></found-items>
+        <found-items found="ctrl.found" on-remove="ctrl.removeItem(index)"></found-items>
 
         <h4 ng-if="ctrl.noItems">Nothing found.</h4>
     </div>
