--- a/module4-solution/src/categories.template.html
+++ b/module4-solution/src/categories.template.html
@@ -1,3 +1,3 @@
 <ul>
-    <li ng-repeat="item in $ctrl.categoriesList"> {{item}} </li>
+    <li ng-repeat="item in $ctrl.categoriesList"> {{$ctrl}} </li>
 </ul>
