--- a/module4-solution/src/items.template.html
+++ b/module4-solution/src/items.template.html
@@ -1,3 +1,3 @@
 <ul>
-    <li ng-repeat="item in $ctrl.itemsList"> {{item}} </li>
+    <li ng-repeat="item in $ctrl.itemsList" ng-click="$ctrl.getItems()"> {{item}} </li>
 </ul>
