Preemptively created sign-up service, created sign-up controller, and finished sign-up state/view

--- a/module5-solution/src/public/signup/sign-up.html
+++ b/module5-solution/src/public/signup/sign-up.html
@@ -2,7 +2,7 @@
 
     <h2>Sign up for our newsletter by filling out your inforation below!</h2>
     
-    <form novalidate style="padding: 5%; border: 5px solid black; background-color: #FFF; color:black;">
+    <form novalidate name="signupForm" style="padding: 5%; border: 5px solid black; background-color: #FFF; color:black;">
         <label for="fname" style="margin: 5px">First Name:</label>
         <input type="text" placeholder="First Name" name="fname" id="fname" required /><br/><br/>
 
