--- a/module5-solution/src/public/signup/sign-up.html
+++ b/module5-solution/src/public/signup/sign-up.html
@@ -4,19 +4,26 @@
     
     <form novalidate name="signupForm" style="padding: 5%; border: 5px solid black; background-color: #FFF; color:black;">
         <label for="fname" style="margin: 5px">First Name:</label>
-        <input type="text" placeholder="First Name" name="fname" id="fname" required /><br/><br/>
+        <input type="text" placeholder="First Name" name="fname" id="fname" ng-model="form.fname" min-length="1" required />
+        <span ng-if="signupForm.fname.$error.required && signupForm.fname.$touched">Please enter your first name.</span><br/><br/>
 
         <label for="lname" style="margin: 5px">Last Name:</label>
-        <input type="text" placeholder="Last Name" name="lname" id="lname" required /><br/><br/>
+        <input type="text" placeholder="Last Name" name="lname" id="lname" ng-model="form.lname" min-length="1" required />
+        <span ng-if="signupForm.lname.$error.required && signupForm.lname.$touched">Please enter your last name.</span><br/><br/>
 
         <label for="email" style="margin: 5px">Email Address:</label>
-        <input type="text" placeholder="Email Address" name="email" id="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" required /><br/><br/>
+        <input type="text" placeholder="Email Address" name="email" id="email" ng-model="form.email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" required />
+        <span ng-if="(signupForm.email.$error.required || signupForm.email.$error.pattern) && signupForm.email.$touched">Please enter a valid email address.</span><br/><br/>
 
         <label for="phone" style="margin: 5px">Phone Number:</label>
-        <input type="text" placeholder="e.g. 123-456-7899" name="phone" id="phone" pattern="([0-9]{3})-([0-9]{3})-([0-9]{4})" required /><br/><br/>       
+        <input type="text" placeholder="e.g. 123-456-7899" name="phone" id="phone" ng-model="form.phone" pattern="([0-9]{3})-([0-9]{3})-([0-9]{4})" required />
+        <span ng-if="(signupForm.phone.$error.required || signupForm.phone.$error.pattern) && signupForm.phone.$touched">Please enter a valid phone number.</span><br/><br/>
 
         <label for="menuItem" style="margin: 5px">Menu Number of Favorite Dish:</label>
-        <input type="text" placeholder="Menu Item #" name="menuItem" id="menuItem" required />
+        <input type="text" placeholder="Menu Item #" name="menuItem" id="menuItem" ng-model="form.menuItem" required />
+        <span ng-if="signupForm.menuItem.$error.required && signupForm.menuItem.$touched">Please enter a menu number.</span><br/><br/>
+
+        <button type="submit" ng-disabled="signupForm.$invalid" >Submit</button>
 
     </form>
 
