--- a/module5-solution/src/public/signup/sign-up.html
+++ b/module5-solution/src/public/signup/sign-up.html
@@ -20,8 +20,9 @@
         <span ng-if="(signupForm.phone.$error.required || signupForm.phone.$error.pattern) && signupForm.phone.$touched">Please enter a valid phone number.</span><br/><br/>
 
         <label for="menuItem" style="margin: 5px">Menu Number of Favorite Dish:</label>
-        <input type="text" placeholder="Menu Item #" name="menuItem" id="menuItem" ng-model="form.menuItem" required />
-        <span ng-if="signupForm.menuItem.$error.required && signupForm.menuItem.$touched">Please enter a menu number.</span><br/><br/>
+        <input type="text" placeholder="Menu Item Code, e.g. L5" name="menuItem" id="menuItem" ng-model="form.menuItem" required />
+        <span ng-if="signupForm.menuItem.$error.required && signupForm.menuItem.$touched">Please enter a menu number.</span>
+        <span ng-if="signupCtrl.SignupService.faveMenuItem == 0">No such menu number exists.</span><br/><br/>
 
         <button ng-disabled="signupForm.$invalid" ng-click="signupCtrl.SignupService.getFaveItem(form.menuItem)">Submit</button>
 
