--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -51,7 +51,7 @@
                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
               </li>
               <li>
-                <a href="#">
+                <a ui-sref="public.myinfo">
                   <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> My Info</a>
               </li>
               <li>
@@ -113,7 +113,8 @@
     <!-- Libs -->
     <script src="lib/jquery-2.1.4.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
-    <script src="lib/angular.min.js"></script>
+    <!-- <script src="lib/angular.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
 
     <!-- Main Restaurant Module -->
@@ -134,6 +135,7 @@
     <script src="src/public/menu-items/menu-items.controller.js"></script>
     <script src="src/public/menu-item/menu-item.component.js"></script>
     <script src="src/public/signup/signup.controller.js"></script>
+    <script src="src/public/myinfo/myinfo.controller.js"></script>
 
 
     <!-- ADMIN SITE -->
